--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "nodejs-polars": "^0.15.0"
+    "@observablehq/plot": "^0.6.16",
+    "linkedom": "^0.18.5",
+    "nodejs-polars": "^0.15.0",
+    "vega": "^5.30.0",
+    "vega-lite": "^5.21.0"
   }
 }
